fix alignment of header buttons, make whole of logo clickable

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -21,8 +21,13 @@ body {
 	flex-direction: column;
 	main {
 		margin-bottom: 2rem;
+		position: relative;
+		z-index: 1;
 	}
 	footer {
 		margin-top: auto;
+		position: relative;
+		z-index: 2;
 	}
 }
+
