--- a/app/assets/stylesheets/modules/content_rich.scss
+++ b/app/assets/stylesheets/modules/content_rich.scss
@@ -9,11 +9,17 @@
 	padding: em(20, 10);
 	background-color: white;
 	margin-bottom: em(30, 10);
-	margin-top: 0;
+	margin-top: 31vw;
 	transition: margin-top .5s;
+	position: relative;
+	z-index: 2;
 	@media (min-width: 961px) {
 		box-shadow: 0px 0px 7px -2px rgb(173, 173, 173);
-		margin-top: em(-150, 10);
+		margin-top: 28vw;
+	}
+
+	form.content_rich--wrapper & {
+		margin-top: em(20, 10);
 	}
 }
 
@@ -22,14 +28,19 @@
 	background-size: cover;
 	background-color: $teal-30;
 	min-height: em(300, 10);
-	height: 31vw;
+	height: calc(31vw + 72px);
+	@media (max-width: 720px) {
+		height: calc(31vw + 58px);
+	}
 	width: 100%;
 	display: flex;
 	align-items: flex-end;
 	justify-content: space-between;
+	position: fixed;
+	z-index: 1;
+	top: 0;
 	@media (max-width: 960px) {
 		min-height: 31vw;
-		height: 31vw;
 	}
 }
 
