--- a/app/assets/stylesheets/modules/navigation.scss
+++ b/app/assets/stylesheets/modules/navigation.scss
@@ -174,6 +174,8 @@ footer[role="contentinfo"] {
   display: flex;
   align-items: center;
   a {
+    display: flex;
+    align-items: center;
     color: black;
   }
 }
@@ -258,6 +260,12 @@ footer[role="contentinfo"] {
         top: -2px;
         right: -3px;
     }
+  }
+}
+
+@media screen and (min-width: 45.0625em) {
+  .signed_in_btn {
+    margin-left: calc(20px + 3vw);
   }
 }
 
